tdf#58518: add message in case of not text file with "Insert->File" in Writer

Change-Id: I5d3d6153cdb58485043e80331e0b4f1e55a03412